# conag

./: .gitignore  Cargo.toml  README.md  aggregate_conag.sh  aggregate_files.sh  aggregated_contents.txt  install.sh  test_conag.sh
.github/workflows/: release.yml
config/: default_config.toml
scripts/: setup_release.sh
src/: aggregator.rs  cli.rs  config.rs  file_system_ops.rs  ignore_rules.rs  lib.rs  main.rs
tests/: aggregator_tests.rs  config_tests.rs  file_system_ops.rs  file_system_ops_tests.rs  ignore_rules_tests.rs  override_tests.rs
tests/integration/: cli_tests.rs
