[package]
name = "conag"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "^4.3", features = ["derive"] }
toml = "^0.7"
walkdir = "^2.3"
anyhow = "^1.0"
rayon = "^1.7"
serde = { version = "^1.0", features = ["derive"] }
log = "^0.4"
env_logger = "^0.10"

[dev-dependencies]
assert_cmd = "^2.0"
predicates = "^2.1"
tempfile = "^3.2"



