[package]
name = "conag"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "^4.3", features = ["derive"] }
toml = "^0.7"
glob = "^0.3"
walkdir = "^2.3"
anyhow = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
dirs = "^5.0"

[dev-dependencies]
assert_cmd = "^2.0"
predicates = "^2.1"
tempfile = "^3.2"

[features]
dev = []




